# kwin-effects-blur-respect-rounded-decorations

./: CMakeLists.txt  README.md  install  uninstall.sh
src/: CMakeLists.txt  blur.cpp  blur.h  blur.kcfg  blurshader.cpp  blurshader.h  metadata.json  plugin.cpp
src/kcm/: CMakeLists.txt  blur_config.cpp  blur_config.desktop  blur_config.ui
